@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Configure and display print prices
skinparam class {
 BorderColor #344054
 FontColor #101828
 BackgroundColor #F9FAFB
}
class PrintOption {
 +Guid Id
 +string Name
 +string Dimensions
 +string Finish
 +Money UnitPrice
 +bool Enabled
 +long Version
 +SetPrice(price: Money): void
}
class Money <<value object>> {
 +decimal Amount
 +string Currency
 +RoundToCents(): Money
}
PrintOption ..> Money : uses CAD arithmetic
interface IStudioStore {
 +Run<T>(lockKey, action): Task<T>
}
interface IStudioTransaction {
 +Get<T>(id): Task<T?>
 +List<T>(): Task<T[]>
 +Save<T>(value, expectedVersion): Task
}
IStudioStore ..> IStudioTransaction : scopes one committed unit of work
IStudioStore o-- PrintOption : persists or supplies inputs
@enduml
